fix alignment

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -33,7 +33,7 @@
     max-width: 90%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: left;
     text-align: left;
     padding: 20px 0px;  
